NIFI-14008 Add verify implementation to JsonConfigBasedBoxClientService and provide enhanced error message when box connection fails.